# webinar-cmake

./: CMakeLists.txt
example0_gnu_make/: Makefile  answer.cpp  answer.h  main.cpp
example1/: CMakeLists.txt
example2/: CMakeLists.txt
example3/: CMakeLists.txt  config.h.in
example4/: CMakeLists.txt
example4/lib/: CMakeLists.txt
example5/: CMakeLists.txt
example5/src/: CMakeLists.txt
example6/: CMakeLists.txt
example7/: CMakeLists.txt
example7/example/: CMakeLists.txt
example8/: CMakeLists.txt
