cmake_minimum_required(VERSION 3.12)

project(CMakeExamples)

add_subdirectory(example1)
add_subdirectory(example3)
add_subdirectory(example4)

# Next examples are disabled as they require manual work for a successful build:
# add_subdirectory(example5)
# add_subdirectory(example6)
# add_subdirectory(example7)